# ironpipe

./: Cargo.toml  README.md
docs/: architecture.md  rebar-integration.md  state-machine.md  trigger-rules.md
examples/benchmark/: README.md  image_pipeline.json
examples/benchmark/src/: main.rs
examples/nyc-taxi/: Cargo.toml  Dockerfile  Dockerfile.standalone  docker-compose.yml
examples/nyc-taxi/src/: executors.rs  main.rs  pipeline.rs  transport.rs
src/: dag.rs  dag_run.rs  diagram.rs  executor.rs  lib.rs  scheduler_actor.rs  task.rs  task_group.rs  task_id.rs  task_state.rs  trigger_rule.rs  verification.rs  xcom.rs  xcom_actor.rs
