[package]
name = "ironpipe"
version = "0.1.0"
edition = "2024"

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
nursery = { level = "warn", priority = -1 }
module_name_repetitions = { level = "allow" }
must_use_candidate = { level = "allow" }
missing_errors_doc = { level = "allow" }
missing_panics_doc = { level = "allow" }
return_self_not_must_use = { level = "allow" }
cast_possible_truncation = { level = "allow" }
cast_possible_wrap = { level = "allow" }
cast_sign_loss = { level = "allow" }

[[bin]]
name = "dag-cli"
path = "src/bin/cli.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
async-trait = "0.1"
rebar = { git = "https://github.com/alexandernicholson/rebar.git" }
rmpv = "1"
tokio = { version = "1", features = ["full"] }
ratatui = "0.29"
crossterm = "0.28"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
