[package]
name = "nyc-taxi-demo"
version = "0.1.0"
edition = "2024"

[dependencies]
ironpipe = { path = "../.." }
rebar = { git = "https://github.com/alexandernicholson/rebar.git" }
rebar-cluster = { git = "https://github.com/alexandernicholson/rebar.git" }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmpv = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", features = ["json"] }
